<resources>
    <string name="app_name">至高の支払い</string>
    <string name="nanido">難易度</string>
    <string name="star1">★</string>
    <string name="star2">★★</string>
    <string name="star3">★★★</string>
    <string name="star4">★★★★</string>
    <string name="star5">★★★★★</string>
    <string name="sec">sec</string>
    <string name="game_manual">ゲーム説明</string>
    <string name="game_ranking">ランキング</string>
    <string name="zero">0</string>
    <string name="ryokin">料金</string>
    <string name="shiharai">支払</string>
    <string name="shiharai2">支払い</string>
    <string name="tsuri">釣り</string>
    <string name="yen">円</string>
    <string name="level">レベル</string>
    <string name="time">時間</string>
    <string name="seikaisu">正解数</string>
    <string name="slash">/</string>
    <string name="huseikaisu">不正解数</string>
    <string name="ichi">一:</string>
    <string name="go">　五:</string>
    <string name="jyu">　十:</string>
    <string name="gojyu">五十:</string>
    <string name="hyaku">百:</string>
    <string name="gohyaku">五百:</string>
    <string name="sen">　千:</string>
    <string name="gosen">五千</string>
    <string name="go_to_top">トップに戻る</string>
    <string name="check_seikai">確認</string>
    <string name="time2">タイム:</string>
    <string name="clear">CLEAR!</string>
    <string name="vest_time_update">ベストタイム更新！</string>
    <string name="vest_time">ベストタイム:</string>
    <string name="user_name">名無しさん</string>
    <string name="manual1">至高の支払い方法とは</string>
    <string name="manual2">支払いでお釣りが返ってきたときに、財布の中身がなるべく大きい硬貨になり、小銭がたまらないようにする支払い方法です。</string>
    <string name="manual3">支払い方法です。</string>

    <string name="rule1">
    ・難易度（★）を選択するとゲームが始まります。\n\n・料金が表示されるので財布からお金をタップし支払いトレーにお金を移します。\n\n
    ・支払いボタンをタップすると正解（〇）、不正解（×）の判定が出ます。\n\n
    ・正解数が目標数になるとゲームクリアになります。\n\n
    ・不正解数が一定数になるとゲームオーバーになります。\n\n
    ・前回の正解のお金の枚数が右上に表示されるので、間違えたときは確認ができます。\n\n
    ・ランキングの名前を変更したい場合は、トップ画面の上部にあるユーザー名をタップしてください。</string>


    <!--
    <string name="manual1">～ はじめに ～</string>
    <string name="manual2">このアプリは財布の中身を最もスマートにする至高の支払い方法をマスターするためのアプリです。\n</string>
    <string name="manual3">至高の支払い方法とは、\nお釣りをもらった時に、最も財布の中の硬貨がより額の大きい硬貨で構成される支払い方法です。\n</string>
    <string name="manual4">現実には、小銭を出す手間や、レジの人が不慣れだった場合、余計に時間がかかってしまうケースもありますが、財布を小銭だらけで膨らませないためにも、ぜひ状況によって使ってみてください。</string>

    <string name="rule1">～ ルール ～</string>
    <string name="rule2">・難易度の★を選択するとゲームが始まります。\n・料金が表示されるので財布にあるお金をタップし支払いトレーにお金を移動します。\n・お金の選択ルールは、</string>
    <string name="rule3">最も支払い枚数が少ない支払い方ではなく、"</string>
    <string name="rule4">お釣りをもらった時に、最も財布の中の硬貨がより額の大きい硬貨で構成されるように支払わなければなりません。</string>
    <string name="rule5">・お金をトレーに移し、支払いボタンを押すと\n正解の場合、〇が表示され、お釣りが財布に払われ、正解数が増えます。\n不正解の場合、×が表示され、支払った額が財布に戻され、不正解数が増えます。\nピンクのバーが右に達した場合も時間切れで不正解になります。\n・支払い時に右上の緑枠に正解枚数が表示され、不正解時にはやや長めに確認できるようになっています。\n\n・正解数が規定数に達したら、ゲームクリアになります。\n・不正解数が規定数に達したら、ゲームオーバーになります。</string>
    -->
    <string name="admob_app_id">ca-app-pub-1057765466901496~2762027462</string>

    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id_main">ca-app-pub-1057765466901496/1117773300</string>
    <string name="banner_ad_unit_id_game">ca-app-pub-1057765466901496/9047346160</string>
    <string name="banner_ad_unit_id_manual">ca-app-pub-1057765466901496/7061767494</string>
    <string name="banner_ad_unit_id_clear">ca-app-pub-1057765466901496/9017970708</string>

    <!-- Crashlytics -->
    <string name="com.crashlytics.useFirebaseAppId">true</string>

</resources>
