<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context="jp.kirin3.changegamegit.MainActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="ユーザー名:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge">
        </TextView>
        <TextView
            android:id="@+id/textUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue2"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textSize="40sp"

            android:textAppearance="?android:attr/textAppearanceLarge">
        </TextView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout1"
                android:layout_gravity="center"
                android:text="@string/nanido"
                android:textSize="20sp" >
            </TextView>

            <LinearLayout
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textGameStart1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="35sp"
                    android:text="@string/star1">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_marginLeft = "10dp"
                    android:layout_gravity="bottom"
                    android:id="@+id/textGameVestTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:id="@+id/textGameVestTimeSec1"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:paddingLeft="2dp"
                    android:textSize="15sp"
                    android:text="@string/sec">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textGameStart2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="35sp"
                    android:text="@string/star2">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_marginLeft = "10dp"
                    android:layout_gravity="bottom"
                    android:id="@+id/textGameVestTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:id="@+id/textGameVestTimeSec2"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:paddingLeft="2dp"
                    android:textSize="15sp"
                    android:text="@string/sec">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textGameStart3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="35sp"
                    android:text="@string/star3">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft = "10dp"
                    android:id="@+id/textGameVestTime3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_gravity="bottom"
                    android:id="@+id/textGameVestTimeSec3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:paddingLeft="2dp"
                    android:textSize="15sp"
                    android:text="@string/sec">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textGameStart4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="35sp"
                    android:text="@string/star4">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft = "10dp"
                    android:id="@+id/textGameVestTime4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_gravity="bottom"
                    android:id="@+id/textGameVestTimeSec4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:paddingLeft="2dp"
                    android:textSize="15sp"
                    android:text="@string/sec">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textGameStart5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="35sp"
                    android:text="@string/star5">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft = "10dp"
                    android:id="@+id/textGameVestTime5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:visibility = "gone"
                    android:layout_gravity="bottom"
                    android:id="@+id/textGameVestTimeSec5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/forestGreen"
                    android:paddingLeft="2dp"
                    android:textSize="15sp"
                    android:text="@string/sec">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:textSize="20sp"
                android:id="@+id/buttonManial"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_manual" />

            <Button
                android:textSize="20sp"
                android:id="@+id/buttonRanking"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_ranking" />
        </LinearLayout>
    </LinearLayout>

    <!-- ☆
    <RelativeLayout
        android:visibility = "visible"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_main">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
    -->
</RelativeLayout>
